@@ -24,25 +24,7 @@
 #include "PreCompiled.h"
 
 #ifndef _PreComp_
-#	include <TDF_Label.hxx>
-#	include <TDF_ChildIterator.hxx>
-#	include <TDF_Tool.hxx>
-#	include <TCollection_AsciiString.hxx>
-#	include <TDF_ListIteratorOfAttributeList.hxx>
-#	include <TFunction_Logbook.hxx>
-#	include <TFunction_DriverTable.hxx>
-#	include <TFunction_Function.hxx>
-# include <TNaming_Builder.hxx>
-# include <TNaming_NamedShape.hxx>
-# include <TopoDS_Shape.hxx>
-#	include <Standard_GUID.hxx>
 #endif
-
-#include <Base/Console.h>
-#include <Base/Exception.h>
-using Base::Console;
-
-#include "TopologyPy.h"
 
 #include "PartFeature.h"
 #include "PartFeaturePy.h"
@@ -62,7 +44,7 @@ Feature::Feature(void)
   showMode.setValue("Normal");
 }
 
-Standard_Integer Feature::execute(void)
+int Feature::execute(void)
 {
   return 0;
 }
